Migrate revised security IT to embedded tests